:recycle: refactor: Refatoração Carga Inicial